# hairline-defense-force

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
admin/: README.md  app.py  bridge.py  requirements.txt  server.py  start.sh
benchmarks/: bench_concurrent.cpp  bench_matching.cpp  bench_multicore.cpp  bench_network.cpp  bench_sharded.cpp  benchmark.cpp
benchmarks/latency/: e2e.cpp  matching.cpp  multicore.cpp
data/: generated_orders.jsonl  history.jsonl
doc/: task_breakdown.md
docs/: admin_ui_design.md  bench.md  how_to_contribute.md  risk_controller_development.md  task_breakdown.md  trade_logger_development.md
docs/benchmarks/: 03_fixed_point_refactoring.md  04_flat_orderbook.md  05_fixed_string.md  benchv1.md  benchv2-native.md  benchv2.md  benchv3-native.md  benchv3.md  benchv4.md  benchv5_memory_pool.md  benchv6_lockfree_queue.md
docs/benchmarks/latency/: benchv1.md  benchv2.md  benchv3.md  benchv4.md
examples/: admin_main.cpp  demo_input.jsonl  exchange.cpp  generate_history.cpp  pre_exchange.cpp
include/: admin_server.h  client.h  constants.h  fast_hashmap.h  fixed_str.h  fixed_string.h  lob.h  matching_engine.h  memory_pool.h  mpsc_queue.h  perf_counter.h  risk_controller.h  security_core.h  sharded_matching_engine.h  spsc.h  trade_logger.h  trade_system.h  types.h  utils.h
scripts/: analyze_history.ipynb  analyze_history.py  generate_orders.py
src/: admin_server.cpp  main.cpp  matching_engine.cpp  risk_controller.cpp  security_core.cpp  sharded_matching_engine.cpp  trade_logger.cpp  trade_system.cpp
tests/: exchange_test.cc  gateway_test.cc  json_test.cpp  matching_test.cpp  requirement_test.cpp  risk_test.cpp  trade_logger_test.cpp
